examples/test/testpolicy17310.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17310
  namespace: namespace403
spec:
  podSelector:
    matchLabels:
      key26: value35
      key46: value1
      key5: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value13
          key42: value9
          key21: value46
      podSelector:
        matchLabels:
          key46: value48
          key38: value47
          key8: value27
